add delete user function

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,3 +9,16 @@ admin:
   name: admin
   email: admin@xxx.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+
+xxx:
+  name: xxx
+  email: xxx@xxx.com
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
