--- a/config/application.yml
+++ b/config/application.yml
@@ -14,7 +14,7 @@
 # 邮件服务器地址
 SENDGRID_ADDRESS: smtp.qq.com
 # 邮件服务器端口
-SENDGRID_PORT: 25
+SENDGRID_PORT: '25'
 # Domain
 SENDGRID_DOMAIN: qq.com
 # 邮件服务器用户名
