--- a/test/fixtures/tokens.yml
+++ b/test/fixtures/tokens.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  token: MyString
-  name: MyString
-  user: 
+bijiabobo:
+  token: <%= Token.new_token %>
+  name: iPhone 6
+  user: bijiabobo
 
-two:
-  token: MyString
-  name: MyString
-  user: 
+admin:
+  token: <%= Token.new_token %>
+  name: iPad Air
+  user: admin
