--- a/config/application.yml
+++ b/config/application.yml
@@ -10,6 +10,9 @@
 #   stripe_api_key: sk_live_EeHnL644i6zo4Iyq4v1KdV9H
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 
+# 系统信息
+System_version: 0.0.2
+
 # 基础设置
 Base_title: Bijiabo.com
 Logo_text: Bijiabo
