--- a/config/application.yml
+++ b/config/application.yml
@@ -19,8 +19,8 @@ Base_title: Bijiabo.com
 Logo_text: Bijiabo
 
 # 图片尺寸设置
-image_maxium_width: 600
-image_maxium_height: 400
+image_maxium_width: '600'
+image_maxium_height: '400'
 
 # 邮件服务器设置
 # 邮件服务器地址
