--- a/test/fixtures/cats.yml
+++ b/test/fixtures/cats.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
+  name: Speedy
   age: 1
-  breed: MyString
+  breed: Nulla luctus felis
+  user: bijiabobo
 
 two:
-  name: MyString
-  age: 1
-  breed: MyString
+  name: HuaHua
+  age: 2
+  breed: Garfield
+  user: bijiabobo
